# omsi-launcher

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.gradle.kts  local.properties  renovate.json  settings.gradle.kts
.github/workflows/: ci.yaml  draft_release.yaml  release.yaml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: rust.kt
fs-util/: .gitignore  Cargo.toml  README.md  build.gradle.kts
fs-util/src/: activate-omsi.rs  clone-omsi.rs  directory_copier.rs  launcher.rs  lib.rs  omsi_linker.rs  privileges.rs  relink-omsi.rs
src/main/kotlin/: Application.kt  ApplicationEntry.kt  Main.kt
src/main/kotlin/app/: Application.kt  ApplicationState.kt
src/main/kotlin/components/: ClickablePath.kt  ConfirmationDialog.kt  InstanceListEntry.kt
src/main/kotlin/config/: ConfigReader.kt  Configuration.kt  PersistentValue.kt
src/main/kotlin/instance/: CurrentInstanceWatcher.kt  Instance.kt  InstanceIO.kt  InstanceOptions.kt  InstanceReader.kt  InstanceState.kt  InstanceViewModel.kt  SavedInstance.kt
src/main/kotlin/localization/: Strings.kt  StringsDe.kt  StringsEn.kt  Translatable.kt
src/main/kotlin/omsi/: OmsiInstaller.kt  OmsiPatcher.kt  OmsiProcessWatcher.kt
src/main/kotlin/serialization/: PathSerializer.kt  SerializableUUID.kt
src/main/kotlin/setup/: Setup.kt  SetupScreen.kt
src/main/kotlin/steam/: ManifestMerger.kt
src/main/kotlin/ui/: Application.kt  CustomColors.kt  Settings.kt
src/main/kotlin/util/: ApplicationNameUtil.kt  FileChooser.kt  GithubReleaseChecker.kt  LogUtil.kt  OmsiUtil.kt  (+5 more)
src/main/resources/: logback.xml
(+56 files in other folders)
