[package]
name = "fs-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "clone-omsi"
path = "src/clone-omsi.rs"

[[bin]]
name = "activate-omsi"
path = "src/activate-omsi.rs"

[[bin]]
name = "relink-omsi"
path = "src/relink-omsi.rs"

[dependencies]
structopt = "0.3"
deelevate = { git = "https://github.com/NyCodeGHG/omsi-elevate" }
log = "0.4"
simple_logger = "2.2"
